--- a/hassembly-evm.cabal
+++ b/hassembly-evm.cabal
@@ -34,7 +34,7 @@ library
 executable hassembly-evm
   hs-source-dirs:      app
   main-is:             Main.hs
-  build-depends:       base,
+  build-depends:       base >= 4.7 && < 5,
                        hassembly-evm
   default-language:    Haskell2010
 
