--- a/hassembly-evm.cabal
+++ b/hassembly-evm.cabal
@@ -28,7 +28,7 @@ library
                        Language.Evm.Utils
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base, mtl
+  build-depends:       base, transformers
   default-language:    Haskell2010
 
 executable hassembly-evm
